# Madgine

./: .clang-format  .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Configs.txt  Generators.txt  Jenkinsfile  Jenkinsfile-Old  LICENSE  LICENSE.md  README.md  couscous.yml  notes.txt
Base/: CMakeLists.txt  baselib.cpp
Base/doc/: Doxyfile  mainpage.dox
Base/src/: MadgineObject.cpp  MadgineObject.h  MadgineObjectCollector.cpp  MadgineObjectCollector.h  TopLevelIds.h  baseforward.h  baselib.h  uniquecomponent.h  uniquecomponentcollector.h
Interfaces/: CMakeLists.txt  interfaceslib.cpp
Interfaces/src/: interfacesforward.h  interfaceslib.h  singleton.h  templates.cpp  templates.h  valuetype.cpp  valuetype.h
Madgine/: CMakeLists.txt  forward.h  libinclude.cpp  libinclude.h  madginelib.h  madgineobject.h  ogreuniquecomponentcollector.h  serverforward.h  serverlib.h  singletonimpl.h  uniquecomponentcollector.h
Madgine/App/: Application.cpp  Application.h  appsettings.h  configset.cpp  configset.h  contextmasks.h
Madgine/CMake/: FindMYGUI.cmake  MadgineConfigVersion.cmake.in
Madgine/Database/: exceptionmessages.h  translationkey.cpp  translationkey.h  translationunit.h
Madgine/GUI/: GUIEvents.h
Madgine/Input/: InputHandler.h  OISInputHandler.cpp
Madgine/Ogre/: IngameOverlay.h  TextureComponent.cpp  entityexception.h  scenecomponent.h  scenelistener.cpp  scenelistener.h  scenemanager.cpp  scenemanager.h  scenenames.h  scenetexturecomponent.h
Madgine/Os/: os.h
Madgine/Resources/: ResourceLoader.cpp
Madgine/Scripting/: scriptexception.h
Madgine/UI/: UIManager.cpp  UIManager.h  gamehandler.cpp  gamehandler.h  guihandler.cpp  guihandler.h  handler.cpp  loadingscreenhandler.cpp  loadingscreenhandler.h  windownames.h
Madgine/Util/: Profiler.cpp  Profiler.h  UtilMethods.h
Madgine/app/: framelistener.h
Madgine/doc/: Doxyfile  DoxyfileLocal  DoxyfileRelease  doxygen_log.txt  mainpage.dox  overview.md  scheme.graphml
Madgine/generic/: container_traits.h  keyvalue.h  onetimefunctor.h  templates.h  valuetype.h
Madgine/gui/: guisystem.cpp
Madgine/input/: inputhandler.cpp  inputhandler.h
Madgine/launcher/: CMakeLists.txt  launcher.cpp
Madgine/math/: vector3.h
Madgine/network/: winapi.cpp
Madgine/plugins/: CMakeLists.txt  gatherDependencies-run.cmake.in  gatherDependencies.cmake.in  madginepluginmanager.cpp  plugin.h  pluginmanager.h
Madgine/project/: CMakeLists.txt
Madgine/resources/: ogretextureptr.cpp
Madgine/scene/: contextmasks.h  ogrelight.cpp  ogrescenemanager.h  scenecomponentbase.h  sceneexception.h  scenemanagerbase.cpp
Madgine/serialize/: serializableunit.cpp  serializemanager.h  toplevelids.h
Madgine/server/: serverappinstance.cpp
Madgine/src/: CMakeLists.txt  Ogrememory.h  forward.h  libinclude.h  madginelib.h  ogreuniquecomponentcollector.h  templates.cpp  templates.h  uniquecomponent.h  uniquecomponentcollector.h  valuetype.cpp  valuetype.h
Madgine/test/: CMakeLists.txt  integrationtests.cpp  main.cpp
Madgine/tools/: CMakeLists.txt  tool.h  toolbase.cpp  toolbase.h  toolscollector.h  toolsforward.h  toolslib.cpp
Madgine/util/: log.cpp  profiler.cpp  serverlog.cpp
Maditor/: CMakeLists.txt  Dependencies.cmake.in  Maditor_packaging.cmake  QScintillaConfig.cmake  madgineinclude.cpp  maditorinclude.cpp  maditorlib.cpp  main.cpp
Maditor/Common/: InputInfo.h  LogInfo.h  ModuleLoaderInfo.h  ProcessTalker.h  Shared.h
Maditor/Launcher/: CMakeLists.txt  madgineinclude.cpp  madgineinclude.h  main.cpp
Maditor/Shared/: AppControl.cpp  AppControl.h  ApplicationInfo.h  CMakeLists.txt  ObjectsInfo.h  Shared.h  SharedBase.h  StatsInfo.h  maditorsharedlib.h
Maditor/Tools/: CMakeLists.txt  ProcessTalker.cpp  ProcessTalker.h
Maditor/cmake/: QScintillaConfig.cmake
Maditor/doc/: Doxyfile
Maditor/launcher/: CMakeLists.txt  applicationwrapper.cpp  applicationwrapper.h  embeddedwrapper.cpp  embeddedwrapper.h  inputwrapper.cpp  inputwrapper.h  inspector.cpp  inspector.h  maditorlauncherforward.h  maditorlauncherlib.cpp  maditorlauncherlib.h  main_embedded.cpp  moduleloader.cpp  moduleloader.h
Maditor/layouts/: Entity.xml  SerializableUnit.xml
Maditor/model/: CMakeLists.txt  dialogmanager.h  maditor.cpp  maditor.h  maditorlog.cpp  maditorlog.h  maditormodelforward.h  maditormodellib.cpp  maditormodellib.h  tablemodel.cpp  tablemodel.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  treesorter.cpp  treesorter.h
Maditor/shared/: CMakeLists.txt  appcontrol.cpp  appcontrol.h  applicationinfo.h  errorcodes.cpp  errorcodes.h  inputinfo.h  maditor_constants.h  maditorsharedforward.h  maditorsharedlib.cpp  maditorsharedlib.h  moduleinstance.cpp  moduleinstance.h  projectfile.cpp  projectfile.h  sharedbase.h  sharedmemory.cpp  sharedmemory.h
Maditor/src/: madgineinclude.h  maditorinclude.h  maditorlib.h  main.cpp
Maditor/templates/: Class.cpp  Class.h  Cmake.txt  CmakeMain.txt  CmakeRelease.txt  EntityComponent.cpp  EntityComponent.h  GameHandler.cpp  GameHandler.h  GlobalAPI.cpp  GlobalAPI.h  GuiHandler.cpp  GuiHandler.h  HeaderGuard.h  OtherClass.cpp  OtherClass.h  OtherClassHeaderOnly.h  SceneComponent.cpp  SceneComponent.h  (+5 more)
Ogre/: CMakeLists.txt  madginelib.cpp
Server/: CMakeLists.txt
Unity/: CMakeLists.txt  unitylib.cpp
base/: CMakeLists.txt  baselib.cpp
client/: CMakeLists.txt  clientlib.cpp  madginelib.cpp
docs/: CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile.in  Examples.md  README.md  client.md  concepts.md  engine.md  generic.md  gettingStarted.md  interfaces.md  keyvalue.md  manual.md  meta.md  modules.md  overview.md  plugins.md  pluginsystem.md  serialize.md  signalslot.md  tasks.md  tooling.md  tools.md  workgroup.md
interfaces/: CMakeLists.txt  interfaceslib.cpp
launcher/: CMakeLists.txt  launcher.cpp  launcher.h  launcherconfig.in.h  main.cpp  main.h  main_compat.h  server.cpp  server.h  terminate_handler.cpp
ogre/: CMakeLists.txt  madginelib.cpp
server/: CMakeLists.txt  serverlib.cpp
shared/: CMakeLists.txt
util/: CMakeLists.txt
(+5550 files in other folders)
